# template-py-rest-microservice

./: .pylintrc  CHANGELOG.md  CHANGELOGS.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  Template Python REST API.postman_collection.json  create-node-port.yaml  create-pod.yaml  k8s-pyrest-deployment.yaml  k8s-pyrest-service.yaml  logging.conf  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: auto-assign.yml
.github/workflows/: codeql.yml  docker-image.yml  docker-publish.yml  pylint.yml
app/: api.py  config.py  main.py  metadata.py  test_main.py
app/api/routers/: router.py  users.py
app/configs/: development.yml  production.py  production.yml  stage.py
app/core/: commonHandlers.py  common_handlers.py  eventHandlers.py  special_handlers.py
app/endpoints/: health.py  info.py  router.py  users.py
app/mocks/: users.py
app/models/: users.py
app/routers/: health.py  info.py  router.py  users.py
app/services/: users.py
