[tool.poetry]
name = "template-py-rest-microservice"
version = "1.1.2"
description = "This repository acts like a project template for all Python based microservice built using FastAPI."
authors = ["Ashwin Hegde <ashwin.hegde3@gmail.com>"]
maintainers = ["Ashwin Hegde <ashwin.hegde3@gmail.com>"]
readme = "README.md"
repository = "https://github.com/beaver-ai/template-py-rest-microservice"
documentation = "https://github.com/beaver-ai"
keywords = ["template", "microservice", "python", "REST", "fastapi"]
homepage = "https://github.com/beaver-ai"
license = "MIT"

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
fastapi-versioning = "^0.10.0"
fastapi-limiter = "latest"
loguru = "^0.6.0"
pydantic = "^1.9.2"
requests = "latest"
uvicorn = "latest"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "latest"
httpx = "latest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
