[tool.poetry]
name = "template-py-rest-microservice"
version = "1.1.6"
description = "This repository acts like a project template for all Python based microservice built using FastAPI."
authors = ["Ashwin Hegde <ashwin.hegde3@gmail.com>"]
maintainers = ["Ashwin Hegde <ashwin.hegde3@gmail.com>"]
readme = "README.md"
repository = "https://github.com/beaver-ai/template-py-rest-microservice"
documentation = "https://github.com/beaver-ai"
keywords = ["template", "microservice", "python", "REST", "fastapi"]
homepage = "https://github.com/beaver-ai"
license = "MIT"

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
fastapi-versioning = "^0.10.0"
loguru = "^0.6.0"
pydantic = "^1.9.2"
fastapi-limiter = "^0.1.5"
requests = "^2.31.0"
uvicorn = "^0.20.0"
omegaconf = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.16.2"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
